# TickTick-game

./: .gitignore  AudioObject.cpp  AudioObject.hpp  Audios.cpp  CMakeLists.txt  Game.cpp  Game.hpp  GameStateManager.cpp  GameStateManager.hpp  GameWorld.cpp  Id.cpp  LICENSE  Level.cpp  Level.hpp  README.md  SpriteSheet.cpp  SpriteSheet.hpp  Sprites.cpp  TickTick.cpp  main.cpp  utils.cpp  window.bat
GameObject/: Player.cpp  Player.hpp  Tile.cpp  Tile.hpp  WaterDrops.cpp  WaterDrops.hpp
GameObjectCom/: GameObject.cpp  GameObject.hpp  GameObjectGrid.hpp  GameObjectList.cpp  GameObjectList.hpp  SpriteGameObject.cpp  SpriteGameObject.hpp
gui/: Button.cpp  Button.hpp  LevelButton.cpp  LevelButton.hpp
states/: GameFinishedState.cpp  GameFinishedState.hpp  GameOverState.cpp  GameOverState.hpp  GameStates.cpp  GameStates.hpp  HelpGameState.cpp  HelpGameState.hpp  LevelSelectGameState.cpp  LevelSelectGameState.hpp  PlayerGameState.cpp  PlayerGameState.hpp  TitleGameState.cpp  TitleGameState.hpp
